# lox

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
examples/: builtin.lox  class.lox  closure.lox  inhertance.lox  sum.lox
lox/: builtin.h  callable.cpp  callable.h  environment.cpp  environment.h  exception.h  expr.cpp  expr.h  function.cpp  function.h  instance.cpp  instance.h  interpreter.cpp  interpreter.h  klass.cpp  klass.h  lexer.cpp  lexer.h  lox.cpp  lox.h  main.cpp  parser.cpp  parser.h  resolver.cpp  resolver.h  return.h  statement.cpp  statement.h  token.cpp  token.h  value.cpp  value.h
